Actions
Bug #1844
closedxen: "disk_link: invalid disk device number"
Start date:
2011-12-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
During boot VM under Xen hypervisor system got message:
"disk_link: invalid disk device number (2048)"
Updated by Vitaliy Gusev over 10 years ago
Updated by Vitaliy Gusev about 10 years ago
Fixing patch information:
Parse Xen device number accordingly to Xen's commit
commit e951dcf324f7ce83da95264fa3c9a3e037269871
Author: Keir Fraser <keir.fraser@citrix.com>
Date: Fri Feb 5 10:36:17 2010 +0000
and message:
From: Ian Jackson <Ian.Jackson@eu.citrix.com>
Subject: Xen vbd numbering
Date: Wed, 03 Feb 2010 16:51:47 GMT
Message-ID: <19305.43376.600816.817077@mariner.uk.xensource.com>
http://lists.xensource.com/archives/html/xen-devel/2010-02/msg00183.html
Updated by Garrett D'Amore about 10 years ago
- Category set to kernel
- Status changed from New to Resolved
- % Done changed from 0 to 100
- Tags deleted (
needs-triage)
Resolved in:
changeset: 13642:8107b374f945
tag: tip
user: Vitaliy Gusev <gusev.vitaliy@nexenta.com>
date: Tue Mar 20 15:29:39 2012 -0700
description:
1844 xen: "disk_link: invalid disk device number"
Reviewed by: Dmitry.Yusupov@nexenta.com
Reviewed by: Albert Lee <trisk@nexenta.com>
Reviewed by: Garrett D'Amore <garrett@damore.org>
Approved by: Garrett D'Amore <garrett@damore.org>
I'm calling this a kernel bug, even though the problem is really devfsadm which lives in user space. Its there to support the kernel though... :-)
Actions