1844 xen:  "disk_link: invalid disk device number" Reviewed by: Dmitry.Yusupov@nexenta.com Reviewed by: Albert Lee <trisk@nexenta.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Garrett D'Amore <garrett@damore.org>